--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -1145,82 +1145,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 238,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Mouse ID</th>\n",
-       "      <th>Timepoint</th>\n",
-       "      <th>Tumor Volume (mm3)</th>\n",
-       "      <th>Metastatic Sites</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Mouse ID, Timepoint, Tumor Volume (mm3), Metastatic Sites]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Calculate the final tumor volume of each mouse across four of the treatment regimens:  \n",
     "# Capomulin, Ramicane, Infubinol, and Ceftamin\n",
+    "#capomulin = result_clean.loc[result_clean['Drug Regimen'] == 'Capomulin']\n",
+    "#ramicane = result_clean.loc[result_clean['Drug Regimen'] == 'Ramicane']\n",
+    "#infubinol = result_clean.loc[result_clean['Drug Regimen'] == 'Infubinol']\n",
+    "#ceftamin = result_clean.loc[result_clean['Drug Regimen'] == 'Ceftamin']\n",
+    "#final_four = pd.concat([capomulin, ramicane, infubinol, ceftamin])\n",
+    "\n",
     "\n",
     "# Start by getting the last (greatest) timepoint for each mouse\n",
-    "\n",
-    "\n",
-    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n"
+    "final = study_results.groupby(['Mouse ID'], as_index=False, sort=False).last()\n",
+    "final = final.drop('Timepoint', axis= 1)\n",
+    "final = final.drop('Metastatic Sites', axis= 1)\n",
+    "final = final.rename(columns={'Tumor Volume (mm3)': 'Final Timepoint Volume'})\n",
+    "final\n",
+    "# Merge this group df with the original DataFrame to get the tumor volume at the last timepoint\n",
+    "final_result = result_clean.merge(final, how=\"left\", on=\"Mouse ID\", sort=False)\n",
+    "capomulin = final_result.loc[final_result['Drug Regimen'] == 'Capomulin']\n",
+    "ramicane = final_result.loc[final_result['Drug Regimen'] == 'Ramicane']\n",
+    "infubinol = final_result.loc[final_result['Drug Regimen'] == 'Infubinol']\n",
+    "ceftamin = final_result.loc[final_result['Drug Regimen'] == 'Ceftamin']\n",
+    "final_four = pd.concat([capomulin, ramicane, infubinol, ceftamin])\n",
+    "final_four = final_four.groupby(['Mouse ID'], as_index=False, sort=False).last()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Capomulin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Ramicane's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n",
-      "Infubinol's potential outliers: 31    36.321346\n",
-      "Name: Tumor Volume (mm3), dtype: float64\n",
-      "Ceftamin's potential outliers: Series([], Name: Tumor Volume (mm3), dtype: float64)\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3890318024.py, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[244], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    vol_list = for object in list\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
-    "\n",
+    "list = [pd.unique(final_four['Drug Regimen'])]\n",
     "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
     "\n",
